[package]
name = "source_code_handler"
version = "0.1.0"
edition = "2021"
authors = ["Mick Clarke <avastmick@outlook.com>"]
license = "MIT"
description = "A library to enable the inspection of source code files in a directory (repository) and provide structured statistics on the contents."
repository = ""
readme = "README.md"
keywords = ["code analysis", "ai", "rag", "vector db", "llm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "12.1.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

