[package]
name = "source_code_handler"
version = "0.1.0"
edition = "2021"
authors = ["Mick Clarke <avastmick@outlook.com>"]
license = "MIT"
description = "A library to enable the inspection of source code files in a directory (repository) and provide structured statistics on the contents."
repository = ""
readme = "README.md"
keywords = ["code analysis", "ai", "rag", "vector db", "llm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78" }
chrono = { version = "0.4.31", features = ["serde"] }
git2 = { version = "0.18.1" }
log = { version = "0.4.20" }
qdrant-client = { version = "1.7.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.109" }
sha2 = { version = "0.10.8" }
tokei = { version = "12.1.2" }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tonic = { version = "0.10.2" }
walkdir = { version = "2.4.0" }

