[package]
name = "repository_statistics"
version = "0.1.0"
edition = "2021"
authors = ["Mick Clarke <avastmick@outlook.com>"]
license = "MIT"
description = "A library to gather structured statistics on the source code files in a software repository, generate embeddings and store in a vector database."
repository = ""
readme = "README.md"
keywords = [ "ai", "code analysis", "embedding", "fastembed", "llm", "qdrant", "rag", "vector db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.78" }
chrono = { version = "0.4.31", features = ["serde"] }
fastembed = {version = "1.10.0" }
git2 = { version = "0.18.1" }
log = { version = "0.4.20" }
qdrant-client = { version = "1.7.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.109" }
sha2 = { version = "0.10.8" }
tokei = { version = "12.1.2" }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tonic = { version = "0.10.2" }
walkdir = { version = "2.4.0" }

